--- a/docs/src/components/DocsNav.astro
+++ b/docs/src/components/DocsNav.astro
@@ -17,22 +17,23 @@ function showSubPage(url) {
   @use '../../tokens' as *;
 
   .nav {
-    box-shadow: inset 1px 0 0 token('color.ui.contrast.10');
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
     font-size: token('font.size.04');
     height: max-content;
     margin-bottom: token('space.md');
-    margin-left: auto;
     max-height: calc(100vh - #{token('space.layout.sm')});
-    min-width: token('space.layout.2xl');
+    min-width: var(--nav-width);
     padding-bottom: token('space.md');
 
     @media (min-width: 600px) {
       border-bottom: none;
       margin-bottom: 0;
+      margin-left: auto;
+      padding-left: token('space.lg');
       padding-bottom: 0;
+      padding-left: token('space.md');
       position: sticky;
       top: token('space.md');
     }
@@ -67,8 +68,7 @@ function showSubPage(url) {
     }
 
     &--subpage {
-      border-left: none;
-      margin-left: token('space.md');
+      padding-left: token('space.lg');
       min-height: token('space.lg');
 
       &[aria-current='page'] {
