--- a/docs/src/components/Nav.astro
+++ b/docs/src/components/Nav.astro
@@ -10,7 +10,12 @@ let {title = 'Cobalt'} = Astro.props;
   .grid {
     display: flex;
     height: 3.5rem;
-    padding-left: token('space.lg');
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: token('space.md');
+    padding-right: token('space.md');
+    max-width: 100vw;
+    width: 92rem;
   }
 
   .title {
