--- a/docs/src/styles/_md.scss
+++ b/docs/src/styles/_md.scss
@@ -53,14 +53,14 @@
     }
   }
 
-  blockquote {
+  .callout {
     background-color: token('color.blue.95');
     border-left: 0.375rem solid token('color.blue.70');
     margin: 0;
     padding: 0.5rem 1.5rem;
-    
-    @media(prefers-color-scheme:dark) {
-      background-color: token('color.blue.15');    
+
+    @media (prefers-color-scheme: dark) {
+      background-color: token('color.blue.15');
     }
   }
 
