Fix landing page BG color

--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -29,12 +29,16 @@ const tokenTypes = [
 ];
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <Head title="Cobalt: manage your design tokens in code" />
     <style lang="scss">
       @use '../../tokens' as *;
+
+      body {
+        background: token('color.blue.50');
+      }
 
       .actions {
         display: flex;
