Standardize on “Design Tokens Format Module” (DTFM) naming

--- a/docs/src/pages/docs/getting-started/index.astro
+++ b/docs/src/pages/docs/getting-started/index.astro
@@ -41,7 +41,13 @@ const title = 'Getting Started';
     Converting your tokens to JSON is a manual process of grabbing values from your design files and formatting the JSON yourself. There’s not a great UI for this yet, but <strong>the Cobalt team is developing one currently</strong>.
   </p>
 
-  <aside class="callout"><p>✨ Cobalt can now convert some Style Dictionary files into the W3C format (<a href="/docs/guides/style-dictionary">docs</a>)</p></aside>
+  <aside class="callout">
+    <p>
+      ✨ Cobalt can now convert some Style Dictionary files into the <a href="https://design-tokens.github.io/community-group/format/" target="_blank" rel="noopener noreferrer">Design Tokens Format Module</a> format (<a
+        href="/docs/guides/style-dictionary">docs</a
+      >)
+    </p>
+  </aside>
 
   <p>Save these all to a <code>tokens.json</code> file (or <code>tokens.yaml</code>, if you prefer YAML) like so:</p>
 
