--- a/docs/src/pages/docs/tokens/index.astro
+++ b/docs/src/pages/docs/tokens/index.astro
@@ -26,9 +26,8 @@ const tokenDef = {
   <h1>Tokens</h1>
 
   <p>
-    Tokens are defined via the <a href="https://design-tokens.github.io/community-group/format/" target="_blank">the W3C Design Tokens format</a> schema (Apr 2023). You’ll save your tokens in a <code>tokens.yaml</code> or <code
-      >tokens.json</code
-    > file in the root of your project. Cobalt supports 100% of the spec, but with the following changes:
+    Tokens are defined via the <a href="https://designtokens.org" target="_blank">Design Tokens Format Module</a> schema (Apr 2023). You’ll save your tokens in a <code>tokens.yaml</code> or <code>tokens.json</code> file in the root of your
+    project. Cobalt supports 100% of the spec, but with the following changes:
   </p>
 
   <ul>
@@ -787,7 +786,7 @@ const tokenDef = {
 
   <h2>Examples</h2>
 
-  <p>Some examples of open design systems using the W3C Design Tokens Community format</p>
+  <p>Some examples of open design systems using the <a href="https://designtokens.org" target="_blank" rel="noopener noreferrer">Design Tokens Format Module</a>.</p>
 
   <p><i>Note: all examples are unofficial and for demonstration purposes only; all companies referenced retain full ownership over their respective systems, and are unaffiliated with this project:</i></p>
 
