--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -169,8 +169,9 @@ const tokenTypes = [
         {[...new Array(1200)].map(() => <Token type={tokenTypes[Math.floor(Math.random() * tokenTypes.length)]} />)}
       </div>
       <div class="hero">
-        <h1 class="title">W3C Design Tokens,<br />Anywhere</h1>
+        <h1 class="title">Design Tokens,<br />Anywhere</h1>
         <ul class="features">
+          <li>Supports the full <a href="https://designtokens.org" target="_blank" rel="noopener noreferrer">Design Tokens Format Module</a> spec</li>
           <li>Generate JS, TS, Sass, CSS, and more with plugins</li>
           <li>Works with Tokens Studio for Figma</li>
           <li>Make Design Tokens part of your dev stack (React, Vue, Svelte, and vanilla JS/HTML supported)</li>
