--- a/docs/src/components/Head.astro
+++ b/docs/src/components/Head.astro
@@ -10,4 +10,4 @@ const {title = 'Cobalt design tokens'} = Astro.props;
 <link rel="apple-touch-icon" type="image/png" sizes="128x128" href="/favicon-128.png" />
 <link rel="apple-touch-icon" type="image/png" sizes="512x512" href="/favicon-512.png" />
 <title>{title}</title>
-<meta type="description" content="Cobalt is open-source tooling for the W3C Design Tokens community spec. Load your design tokens in any website or app using code. Support light and dark mode easily." />
+<meta type="description" content="Cobalt is open-source tooling for the Design Tokens Format Module. Load your design tokens in any website or app using code. Support light and dark mode easily." />
