Add utility CSS option

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -273,6 +273,8 @@ i {
   --vp-c-brand-3: oklch(60% 0.216564 269);
   --vp-c-brand-soft: oklch(60% 0.216564 269/0.2);
 
+  --vp-code-color: var(--vp-c-text-1);
+
   --vp-c-tip-1: var(--vp-c-brand-1);
   --vp-c-tip-2: var(--vp-c-brand-2);
   --vp-c-tip-3: var(--vp-c-brand-3);
