--- a/packages/plugin-css/test/border/want.css
+++ b/packages/plugin-css/test/border/want.css
@@ -6,6 +6,7 @@
 
 :root {
   --ds-border-dashed: 1.5px dashed #a6b0b5;
+  --ds-border-default: var(--ds-border-solid);
   --ds-border-gray: 1px solid var(--ds-color-gray);
   --ds-border-solid: 1px solid #a6b0b5;
   --ds-color-gray: #544741;
@@ -62,3 +63,4 @@
     --ds-color-gray: color(display-p3 0.7333333333333333 0.7137254901960784 0.7019607843137254);
   }
 }
+
