--- a/packages/plugin-css/test/typography/want.css
+++ b/packages/plugin-css/test/typography/want.css
@@ -17,6 +17,7 @@
   --ds-typography-family-body: "IBM Plex Sans", -system-ui, sans-serif;
   --ds-typography-family-footnote: var(--ds-typography-family-body);
   --ds-typography-family-heading: Helvetica;
+  --ds-typography-label: var(--ds-typography-body);
   --ds-typography-page-title-font-family: var(--ds-typography-family-heading);
   --ds-typography-page-title-font-size: 48px;
   --ds-typography-page-title-font-weight: 600;
