--- a/packages/plugin-sass/test/basic/want.sass
+++ b/packages/plugin-sass/test/basic/want.sass
@@ -186,6 +186,9 @@ $__token-values: (
   "typography.family.heading": (
     default: (Helvetica),
   ),
+  "typography.label": (
+    "__cobalt-error": "This is a typography mixin. Use `@include typography(\"typography.label\")` instead.",
+  ),
   "typography.page-title": (
     "__cobalt-error": "This is a typography mixin. Use `@include typography(\"typography.page-title\")` instead.",
   ),
@@ -209,6 +212,14 @@ $__token-typography-mixins: (
       "font-size": (18px),
       "font-style": (italic),
       "font-weight": (300),
+      "line-height": (1.5),
+    ),
+  ),
+  "typography.label": (
+    default: (
+      "font-family": ("IBM Plex Sans", -system-ui, sans-serif),
+      "font-size": (16px),
+      "font-weight": (400),
       "line-height": (1.5),
     ),
   ),
