--- a/packages/plugin-css/test/typography/want.css
+++ b/packages/plugin-css/test/typography/want.css
@@ -17,7 +17,10 @@
   --ds-typography-family-body: "IBM Plex Sans", -system-ui, sans-serif;
   --ds-typography-family-footnote: var(--ds-typography-family-body);
   --ds-typography-family-heading: Helvetica;
-  --ds-typography-label: var(--ds-typography-body);
+  --ds-typography-label-font-family: var(--ds-typography-body-font-family);
+  --ds-typography-label-font-size: var(--ds-typography-body-font-size);
+  --ds-typography-label-font-weight: var(--ds-typography-body-font-weight);
+  --ds-typography-label-line-height: var(--ds-typography-body-line-height);
   --ds-typography-page-title-font-family: var(--ds-typography-family-heading);
   --ds-typography-page-title-font-size: 48px;
   --ds-typography-page-title-font-weight: 600;
@@ -29,4 +32,16 @@
   --ds-typography-subheading-letter-spacing: 0.25em;
   --ds-typography-subheading-line-height: 1.375;
   --ds-typography-subheading-text-transform: uppercase;
+}
+
+@media (width >= 600px) {
+  :root {
+    --ds-typography-body-font-size: 14px;
+    --ds-typography-label-font-family: var(--ds-typography-subheading-font-family);
+    --ds-typography-label-font-size: var(--ds-typography-subheading-font-size);
+    --ds-typography-label-font-weight: var(--ds-typography-subheading-font-weight);
+    --ds-typography-label-letter-spacing: var(--ds-typography-subheading-letter-spacing);
+    --ds-typography-label-line-height: var(--ds-typography-subheading-line-height);
+    --ds-typography-label-text-transform: var(--ds-typography-subheading-text-transform);
+  }
 }
