--- a/packages/plugin-sass/test/basic/want.sass
+++ b/packages/plugin-sass/test/basic/want.sass
@@ -9,170 +9,170 @@
 
 $__token-values: (
   "border.std": (
-    default: (1px solid #0d0300),
+    ".": (1px solid #0d0300),
     "light": (1px solid #0d0300),
     "dark": (1px solid #ffffff),
   ),
   "color.green": (
-    default: (#00ff00),
+    ".": (#00ff00),
     "light": (#6fdd8b),
     "dark": (#56d364),
   ),
   "ease.circ-in": (
-    default: (cubic-bezier(0.55, 0, 1, 0.45)),
+    ".": (cubic-bezier(0.55, 0, 1, 0.45)),
   ),
   "ease.circ-in-out": (
-    default: (cubic-bezier(0.85, 0, 0.15, 1)),
+    ".": (cubic-bezier(0.85, 0, 0.15, 1)),
   ),
   "ease.circ-out": (
-    default: (cubic-bezier(0.33, 1, 0.68, 1)),
+    ".": (cubic-bezier(0.33, 1, 0.68, 1)),
   ),
   "ease.cubic-in": (
-    default: (cubic-bezier(0.32, 0, 0.67, 0)),
+    ".": (cubic-bezier(0.32, 0, 0.67, 0)),
   ),
   "ease.cubic-in-out": (
-    default: (cubic-bezier(0.65, 0, 0.35, 1)),
+    ".": (cubic-bezier(0.65, 0, 0.35, 1)),
   ),
   "ease.cubic-out": (
-    default: (cubic-bezier(0.33, 1, 0.68, 1)),
+    ".": (cubic-bezier(0.33, 1, 0.68, 1)),
   ),
   "ease.linear": (
-    default: (cubic-bezier(0, 0, 1, 1)),
+    ".": (cubic-bezier(0, 0, 1, 1)),
   ),
   "gradient.g-b": (
-    default: (#00ff00 0%, #0000ff 100%),
+    ".": (#00ff00 0%, #0000ff 100%),
   ),
   "shadow.base": (
-    default: (0 4px 8px 0 #0000001a),
+    ".": (0 4px 8px 0 #0000001a),
   ),
   "shadow.inset": (
-    default: (inset 0 4px 8px 0 #00000026),
+    ".": (inset 0 4px 8px 0 #00000026),
   ),
   "shadow.layered": (
-    default: (0 1px 1px 0 #0000001f, 0 2px 2px 0 #0000001f, 0 4px 4px 0 #0000001f, 0 8px 8px 0 #0000001f, 0 16px 16px 0 #0000001f),
+    ".": (0 1px 1px 0 #0000001f, 0 2px 2px 0 #0000001f, 0 4px 4px 0 #0000001f, 0 8px 8px 0 #0000001f, 0 16px 16px 0 #0000001f),
   ),
   "shadow.simple": (
-    default: (0 4px 8px 0 #0000001a),
+    ".": (0 4px 8px 0 #0000001a),
   ),
   "timing.deliberate": (
-    default: (500ms),
+    ".": (500ms),
   ),
   "timing.instant": (
-    default: (50ms),
+    ".": (50ms),
   ),
   "timing.moderate": (
-    default: (250ms),
+    ".": (250ms),
   ),
   "timing.quick": (
-    default: (100ms),
+    ".": (100ms),
   ),
   "timing.slow": (
-    default: (1s),
+    ".": (1s),
   ),
   "transition.circ-in-deliberate": (
-    default: (500ms 0ms cubic-bezier(0.55, 0, 1, 0.45)),
+    ".": (500ms 0ms cubic-bezier(0.55, 0, 1, 0.45)),
   ),
   "transition.circ-in-instant": (
-    default: (50ms 0ms cubic-bezier(0.55, 0, 1, 0.45)),
+    ".": (50ms 0ms cubic-bezier(0.55, 0, 1, 0.45)),
   ),
   "transition.circ-in-moderate": (
-    default: (250ms 0ms cubic-bezier(0.55, 0, 1, 0.45)),
+    ".": (250ms 0ms cubic-bezier(0.55, 0, 1, 0.45)),
   ),
   "transition.circ-in-out-deliberate": (
-    default: (500ms 0ms cubic-bezier(0.85, 0, 0.15, 1)),
+    ".": (500ms 0ms cubic-bezier(0.85, 0, 0.15, 1)),
   ),
   "transition.circ-in-out-instant": (
-    default: (50ms 0ms cubic-bezier(0.85, 0, 0.15, 1)),
+    ".": (50ms 0ms cubic-bezier(0.85, 0, 0.15, 1)),
   ),
   "transition.circ-in-out-moderate": (
-    default: (250ms 0ms cubic-bezier(0.85, 0, 0.15, 1)),
+    ".": (250ms 0ms cubic-bezier(0.85, 0, 0.15, 1)),
   ),
   "transition.circ-in-out-quick": (
-    default: (100ms 0ms cubic-bezier(0.85, 0, 0.15, 1)),
+    ".": (100ms 0ms cubic-bezier(0.85, 0, 0.15, 1)),
   ),
   "transition.circ-in-out-slow": (
-    default: (1s 0ms cubic-bezier(0.85, 0, 0.15, 1)),
+    ".": (1s 0ms cubic-bezier(0.85, 0, 0.15, 1)),
   ),
   "transition.circ-in-quick": (
-    default: (100ms 0ms cubic-bezier(0.55, 0, 1, 0.45)),
+    ".": (100ms 0ms cubic-bezier(0.55, 0, 1, 0.45)),
   ),
   "transition.circ-in-slow": (
-    default: (1s 0ms cubic-bezier(0.55, 0, 1, 0.45)),
+    ".": (1s 0ms cubic-bezier(0.55, 0, 1, 0.45)),
   ),
   "transition.circ-out-deliberate": (
-    default: (500ms 0ms cubic-bezier(0.33, 1, 0.68, 1)),
+    ".": (500ms 0ms cubic-bezier(0.33, 1, 0.68, 1)),
   ),
   "transition.circ-out-instant": (
-    default: (50ms 0ms cubic-bezier(0.33, 1, 0.68, 1)),
+    ".": (50ms 0ms cubic-bezier(0.33, 1, 0.68, 1)),
   ),
   "transition.circ-out-moderate": (
-    default: (250ms 0ms cubic-bezier(0.33, 1, 0.68, 1)),
+    ".": (250ms 0ms cubic-bezier(0.33, 1, 0.68, 1)),
   ),
   "transition.circ-out-quick": (
-    default: (100ms 0ms cubic-bezier(0.33, 1, 0.68, 1)),
+    ".": (100ms 0ms cubic-bezier(0.33, 1, 0.68, 1)),
   ),
   "transition.circ-out-slow": (
-    default: (1s 0ms cubic-bezier(0.33, 1, 0.68, 1)),
+    ".": (1s 0ms cubic-bezier(0.33, 1, 0.68, 1)),
   ),
   "transition.cubic-in-deliberate": (
-    default: (500ms 0ms cubic-bezier(0.32, 0, 0.67, 0)),
+    ".": (500ms 0ms cubic-bezier(0.32, 0, 0.67, 0)),
   ),
   "transition.cubic-in-instant": (
-    default: (50ms 0ms cubic-bezier(0.32, 0, 0.67, 0)),
+    ".": (50ms 0ms cubic-bezier(0.32, 0, 0.67, 0)),
   ),
   "transition.cubic-in-moderate": (
-    default: (250ms 0ms cubic-bezier(0.32, 0, 0.67, 0)),
+    ".": (250ms 0ms cubic-bezier(0.32, 0, 0.67, 0)),
   ),
   "transition.cubic-in-out-deliberate": (
-    default: (500ms 0ms cubic-bezier(0.65, 0, 0.35, 1)),
+    ".": (500ms 0ms cubic-bezier(0.65, 0, 0.35, 1)),
   ),
   "transition.cubic-in-out-instant": (
-    default: (50ms 0ms cubic-bezier(0.65, 0, 0.35, 1)),
+    ".": (50ms 0ms cubic-bezier(0.65, 0, 0.35, 1)),
   ),
   "transition.cubic-in-out-moderate": (
-    default: (250ms 0ms cubic-bezier(0.65, 0, 0.35, 1)),
+    ".": (250ms 0ms cubic-bezier(0.65, 0, 0.35, 1)),
   ),
   "transition.cubic-in-out-quick": (
-    default: (100ms 0ms cubic-bezier(0.65, 0, 0.35, 1)),
+    ".": (100ms 0ms cubic-bezier(0.65, 0, 0.35, 1)),
   ),
   "transition.cubic-in-out-slow": (
-    default: (1s 0ms cubic-bezier(0.65, 0, 0.35, 1)),
+    ".": (1s 0ms cubic-bezier(0.65, 0, 0.35, 1)),
   ),
   "transition.cubic-in-quick": (
-    default: (100ms 0ms cubic-bezier(0.32, 0, 0.67, 0)),
+    ".": (100ms 0ms cubic-bezier(0.32, 0, 0.67, 0)),
   ),
   "transition.cubic-in-slow": (
-    default: (1s 0ms cubic-bezier(0.32, 0, 0.67, 0)),
+    ".": (1s 0ms cubic-bezier(0.32, 0, 0.67, 0)),
   ),
   "transition.cubic-out-deliberate": (
-    default: (500ms 0ms cubic-bezier(0.33, 1, 0.68, 1)),
+    ".": (500ms 0ms cubic-bezier(0.33, 1, 0.68, 1)),
   ),
   "transition.cubic-out-instant": (
-    default: (50ms 0ms cubic-bezier(0.33, 1, 0.68, 1)),
+    ".": (50ms 0ms cubic-bezier(0.33, 1, 0.68, 1)),
   ),
   "transition.cubic-out-moderate": (
-    default: (250ms 0ms cubic-bezier(0.33, 1, 0.68, 1)),
+    ".": (250ms 0ms cubic-bezier(0.33, 1, 0.68, 1)),
   ),
   "transition.cubic-out-quick": (
-    default: (100ms 0ms cubic-bezier(0.33, 1, 0.68, 1)),
+    ".": (100ms 0ms cubic-bezier(0.33, 1, 0.68, 1)),
   ),
   "transition.cubic-out-slow": (
-    default: (1s 0ms cubic-bezier(0.33, 1, 0.68, 1)),
+    ".": (1s 0ms cubic-bezier(0.33, 1, 0.68, 1)),
   ),
   "transition.linear-deliberate": (
-    default: (500ms 0ms cubic-bezier(0, 0, 1, 1)),
+    ".": (500ms 0ms cubic-bezier(0, 0, 1, 1)),
   ),
   "transition.linear-instant": (
-    default: (50ms 0ms cubic-bezier(0, 0, 1, 1)),
+    ".": (50ms 0ms cubic-bezier(0, 0, 1, 1)),
   ),
   "transition.linear-moderate": (
-    default: (250ms 0ms cubic-bezier(0, 0, 1, 1)),
+    ".": (250ms 0ms cubic-bezier(0, 0, 1, 1)),
   ),
   "transition.linear-quick": (
-    default: (100ms 0ms cubic-bezier(0, 0, 1, 1)),
+    ".": (100ms 0ms cubic-bezier(0, 0, 1, 1)),
   ),
   "transition.linear-slow": (
-    default: (1s 0ms cubic-bezier(0, 0, 1, 1)),
+    ".": (1s 0ms cubic-bezier(0, 0, 1, 1)),
   ),
   "typography.body": (
     "__cobalt-error": "This is a typography mixin. Use `@include typography(\"typography.body\")` instead.",
@@ -181,10 +181,10 @@ $__token-values: (
     "__cobalt-error": "This is a typography mixin. Use `@include typography(\"typography.callout\")` instead.",
   ),
   "typography.family.body": (
-    default: ("IBM Plex Sans", -system-ui, sans-serif),
+    ".": ("IBM Plex Sans", -system-ui, sans-serif),
   ),
   "typography.family.heading": (
-    default: (Helvetica),
+    ".": (Helvetica),
   ),
   "typography.label": (
     "__cobalt-error": "This is a typography mixin. Use `@include typography(\"typography.label\")` instead.",
@@ -199,7 +199,7 @@ $__token-values: (
 
 $__token-typography-mixins: (
   "typography.body": (
-    default: (
+    ".": (
       "font-family": ("IBM Plex Sans", -system-ui, sans-serif),
       "font-size": (16px),
       "font-weight": (400),
@@ -207,7 +207,7 @@ $__token-typography-mixins: (
     ),
   ),
   "typography.callout": (
-    default: (
+    ".": (
       "font-family": ("IBM Plex Sans", -system-ui, sans-serif),
       "font-size": (18px),
       "font-style": (italic),
@@ -216,7 +216,7 @@ $__token-typography-mixins: (
     ),
   ),
   "typography.label": (
-    default: (
+    ".": (
       "font-family": ("IBM Plex Sans", -system-ui, sans-serif),
       "font-size": (16px),
       "font-weight": (400),
@@ -224,7 +224,7 @@ $__token-typography-mixins: (
     ),
   ),
   "typography.page-title": (
-    default: (
+    ".": (
       "font-family": (Helvetica),
       "font-size": (48px),
       "font-weight": (600),
@@ -233,7 +233,7 @@ $__token-typography-mixins: (
     ),
   ),
   "typography.subheading": (
-    default: (
+    ".": (
       "font-family": (Helvetica),
       "font-size": (18px),
       "font-weight": (500),
@@ -244,7 +244,7 @@ $__token-typography-mixins: (
   ),
 )
 
-@function token($tokenName, $modeName: default)
+@function token($tokenName, $modeName: ".")
   @if map.has-key($__token-values, $tokenName) == false
     @error "No token named \"#{$tokenName}\""
   $_token: map.get($__token-values, $tokenName)
@@ -253,22 +253,22 @@ $__token-typography-mixins: (
   @if map.has-key($_token, $modeName) {
     @return map.get($_token, $modeName)
   @else
-    @return map.get($_token, default)
+    @return map.get($_token, ".")
 
 @function listModes($tokenName)
   @if map.has-key($__token-values, $tokenName) == false
     @error "No token named \"#{$tokenName}\""
   $_modes: ();
   @each $k in map.get($__token-values, $tokenName)
-    @if $k != "default"
+    @if $k != "."
       $_modes: list.append($_modes, $k);
   @return $_modes;
 
-@mixin typography($tokenName, $modeName: default)
+@mixin typography($tokenName, $modeName: ".")
   @if map.has-key($__token-typography-mixins, $tokenName) == false
     @error "No typography mixin named \"#{$tokenName}\""
   $_mixin: map.get($__token-typography-mixins, $tokenName)
-  $_properties: map.get($_mixin, default)
+  $_properties: map.get($_mixin, ".")
   @if map.has-key($_mixin, $modeName)
     $_properties: map.get($_mixin, $modeName)
   @each $_property, $_value in $_properties
