--- a/packages/plugin-sass/test/plugin-css/tokens.css
+++ b/packages/plugin-sass/test/plugin-css/tokens.css
@@ -6,7 +6,10 @@
 
 :root {
   --ds-border-std: 1px solid #0d0300;
+  --ds-color-blue: #00ff00;
   --ds-color-green: #00ff00;
+  --ds-color-red: #ff0000;
+  --ds-color-redgreenblue: var(--ds-color-red);
   --ds-gradient-g-b: #00ff00 0%, #0000ff 100%;
   --ds-shadow: 0 4px 8px 0 #0000001a;
   --ds-transition: 0ms 0ms cubic-bezier(0.4, 0, 0.6, 1);
@@ -37,7 +40,9 @@
 @supports (color: color(display-p3 1 1 1)) {
   :root {
     --ds-border-std: 1px solid color(display-p3 0.050980392156862744 0.011764705882352941 0);
+    --ds-color-blue: color(display-p3 0 1 0);
     --ds-color-green: color(display-p3 0 1 0);
+    --ds-color-red: color(display-p3 1 0 0);
     --ds-gradient-g-b: color(display-p3 0 1 0) 0%, color(display-p3 0 0 1) 100%;
     --ds-shadow: 0 4px 8px 0 color(display-p3 0 0 0 / 0.10196078431372549);
   }
