--- a/packages/plugin-css/test/typography/want.css
+++ b/packages/plugin-css/test/typography/want.css
@@ -12,7 +12,7 @@
   --ds-typography-callout-font-style: italic;
   --ds-typography-callout-font-weight: 300;
   --ds-typography-callout-line-height: 1.5;
-  --ds-typography-family-body: "IBM Plex Sans", -system-ui, sans-serif;
+  --ds-typography-family-body: "IBM Plex Sans", system-ui, sans-serif;
   --ds-typography-family-footnote: var(--ds-typography-family-body);
   --ds-typography-family-heading: Helvetica;
   --ds-typography-label-font-family: var(--ds-typography-body-font-family);
