--- a/packages/plugin-css/test/border/want.css
+++ b/packages/plugin-css/test/border/want.css
@@ -3,61 +3,44 @@
  * ------------------------------------------- */
 
 :root {
-  --ds-border-dashed: 1.5px dashed #a6b0b5;
-  --ds-border-default: var(--ds-border-solid);
-  --ds-border-gray: 1px solid var(--ds-color-gray);
-  --ds-border-solid: 1px solid #a6b0b5;
-  --ds-color-gray: #544741;
+  --ds-color-gray: color(srgb 0.32941176470588235 0.2784313725490196 0.2549019607843137);
+  --ds-border-color: color(srgb 0.6509803921568628 0.6901960784313725 0.7098039215686275);
+  --ds-border-solid: var(--ds-border-solid-width) var(--ds-border-solid-color) var(--ds-border-solid-style);
+  --ds-border-solid-width: 1px;
+  --ds-border-solid-color: var(--ds-border-color);
+  --ds-border-solid-style: solid;
+  --ds-border-dashed: var(--ds-border-dashed-width) var(--ds-border-dashed-color) var(--ds-border-dashed-style);
+  --ds-border-dashed-width: 1.5px;
+  --ds-border-dashed-color: var(--ds-border-color);
+  --ds-border-dashed-style: dashed;
+  --ds-border-gray: var(--ds-border-gray-width) var(--ds-border-gray-color) var(--ds-border-gray-style);
+  --ds-border-gray-width: 1px;
+  --ds-border-gray-color: var(--ds-color-gray);
+  --ds-border-gray-style: solid;
+  --ds-border-default: var(--ds-border-default-width) var(--ds-border-default-color) var(--ds-border-default-style);
+  --ds-border-default-width: var(--ds-border-solid-width);
+  --ds-border-default-color: var(--ds-border-solid-color);
+  --ds-border-default-style: var(--ds-border-solid-style);
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-    --ds-border-solid: 1px solid #a6b0b5;
-    --ds-color-gray: #544741;
+    --ds-color-gray: color(srgb 0.32941176470588235 0.2784313725490196 0.2549019607843137);
+    --ds-border-color: color(srgb 0.6509803921568628 0.6901960784313725 0.7098039215686275);
   }
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --ds-border-solid: 1px solid #14171b;
-    --ds-color-gray: #bbb6b3;
+    --ds-color-gray: color(srgb 0.7333333333333333 0.7137254901960784 0.7019607843137254);
+    --ds-border-color: color(srgb 0.0784313725490196 0.09019607843137255 0.10588235294117647);
   }
 }
 
 [data-color-theme="light"] {
-  --ds-color-gray: #544741;
+  --ds-color-gray: color(srgb 0.32941176470588235 0.2784313725490196 0.2549019607843137);
 }
 
 [data-color-theme="dark"] {
-  --ds-color-gray: #bbb6b3;
-}
-
-@supports (color: color(display-p3 1 1 1)) {
-  :root {
-    --ds-border-dashed: 1.5px dashed color(display-p3 0.6509803921568628 0.6901960784313725 0.7098039215686275);
-    --ds-border-solid: 1px solid color(display-p3 0.6509803921568628 0.6901960784313725 0.7098039215686275);
-    --ds-color-gray: color(display-p3 0.32941176470588235 0.2784313725490196 0.2549019607843137);
-  }
-
-  @media (prefers-color-scheme: light) {
-    :root {
-      --ds-border-solid: 1px solid color(display-p3 0.6509803921568628 0.6901960784313725 0.7098039215686275);
-      --ds-color-gray: color(display-p3 0.32941176470588235 0.2784313725490196 0.2549019607843137);
-    }
-  }
-
-  @media (prefers-color-scheme: dark) {
-    :root {
-      --ds-border-solid: 1px solid color(display-p3 0.0784313725490196 0.09019607843137255 0.10588235294117647);
-      --ds-color-gray: color(display-p3 0.7333333333333333 0.7137254901960784 0.7019607843137254);
-    }
-  }
-
-  [data-color-theme="light"] {
-    --ds-color-gray: color(display-p3 0.32941176470588235 0.2784313725490196 0.2549019607843137);
-  }
-
-  [data-color-theme="dark"] {
-    --ds-color-gray: color(display-p3 0.7333333333333333 0.7137254901960784 0.7019607843137254);
-  }
+  --ds-color-gray: color(srgb 0.7333333333333333 0.7137254901960784 0.7019607843137254);
 }
