--- a/www/src/layouts/docs.astro
+++ b/www/src/layouts/docs.astro
@@ -36,6 +36,7 @@ const { frontmatter } = Astro.props;
       }
 
       .docs-sidenav {
+        background-color: var(--tz-surface-secondary-bg);
         display: flex;
         grid-area: sidenav;
 
