--- a/packages/tiles/src/Select/Select.css
+++ b/packages/tiles/src/Select/Select.css
@@ -35,6 +35,10 @@
     background-color: var(--tz-nav-secondary-selected-bg);
     color: var(--tz-nav-secondary-selected-text);
     outline: none;
+
+    .tz-select-item-indicator {
+      background-color: var(--tz-nav-secondary-selected-bg);
+    }
   }
 }
 
@@ -42,12 +46,15 @@
   --icon-size: 1rem;
 
   display: grid;
-  gap: var(--tz-space-300);
+  gap: var(--tz-space-200);
   grid-template-columns: var(--icon-size) max-content;
 }
 
 .tz-select-item-icon {
   align-self: center;
+  align-content: center;
+  display: flex;
+  opacity: 0.5;
 }
 
 .tz-select-item-label {
@@ -57,6 +64,7 @@
 
 .tz-select-item-indicator {
   align-items: center;
+  background-color: var(--tz-button-secondary-bg);
   display: inline-flex;
   justify-content: center;
   left: 0;
@@ -107,7 +115,7 @@
 
   &:hover,
   &:focus-visible {
-    outline-color: var(--tz-button-secondary-hover-border);
+    outline-color: var(--tz-nav-primary-highlight);
   }
 }
 
